--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <p>This is my brief life review in pages. Follow me!</p>
       <img src="https://tse3.mm.bing.net/th?id=OIP.CBFZpMOFqyCjyHOJxouwVAHaE8&pid=Api&P=0&h=220" />
     <a href="page one.html">Page one</a>
-    <a href="Page two.html">Page two</a>
-    <a href="Page three.html">Page three</a>
-    <a href="Page four.html">Page four</a>
+    <a href="page two.html">Page two</a>
+    <a href="page three.html">Page three</a>
+    <a href="page four.html">Page four</a>
 </body>
 
 </html>
